# claude-vault-bridge

./: .gitignore  LICENSE  README.md  config.example.yaml  phase-0.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
claude_vault_bridge/: __init__.py  approval.py  config.py  vault.py
docs/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  versions.md
src/: __init__.py  approval.py  audit.py  config.py  filler.py  main.py  vault.py
tests/: test_approval.py  test_audit.py  test_filler.py  test_main.py  test_vault.py
